# auauth

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: API_REFERENCE.md  INSTALL.md
examples/: advanced_usage.py  basic_usage.py  telnet_integration.py
src/auauth/: __init__.py  api.py  exceptions.py
src/auauth/assets/: public_key.pem  public_key2.pem
src/auauth/core/: __init__.py  config.yaml  hardware.py  license.py
src/auauth/core/crypto/: __init__.py  aes_crypto.py  sm2_crypto.py
src/auauth/core/gateway/: __init__.py  auth_processor.py
src/auauth/core/gui/: __init__.py  main_window.py
tests/: test_api.py
