[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auauth"
version = "1.0.0"
description = "设备授权库 - 用于网关设备的SM2/SM3授权认证"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AuTool Team", email = "autool@example.com"}
]
keywords = ["sm2", "sm3", "auth", "gateway", "telnet", "crypto", "license"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gmssl>=3.2.2",
    "pycryptodome>=3.15.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gongwenqing314/auauth"
Documentation = "https://github.com/gongwenqing314/auauth/blob/main/docs/INSTALL.md"
Repository = "https://github.com/gongwenqing314/auauth.git"
Issues = "https://github.com/gongwenqing314/auauth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auauth = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
